--- a/BallisticCalculatorNet.ReticleEditor/BallisticCalculatorNet.ReticleEditor.csproj
+++ b/BallisticCalculatorNet.ReticleEditor/BallisticCalculatorNet.ReticleEditor.csproj
@@ -2,8 +2,10 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>net50-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
 
 </Project>
