--- a/BallisticCalculatorNet.MeasurementControl/BallisticCalculatorNet.MeasurementControl.csproj
+++ b/BallisticCalculatorNet.MeasurementControl/BallisticCalculatorNet.MeasurementControl.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BallisticCalculator" Version="1.1.0.2" />
     <PackageReference Include="Gehtsoft.Measurements" Version="1.1.11" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
