--- a/BallisticCalculatorNet.ReticleEditor/BallisticCalculatorNet.ReticleEditor.csproj
+++ b/BallisticCalculatorNet.ReticleEditor/BallisticCalculatorNet.ReticleEditor.csproj
@@ -15,10 +15,27 @@
 
   <ItemGroup>
     <PackageReference Include="BallisticCalculator" Version="1.1.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BallisticCalculatorNet.MeasurementControl\BallisticCalculatorNet.MeasurementControl.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Forms\EditLineForm - Copy.Designer.cs">
+      <DependentUpon>EditLineForm.Designer.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Forms\EditLineForm - Copy.resx">
+      <DependentUpon>EditLineForm.resx</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
