--- a/BallisticCalculatorNet.ReticleEditor/BallisticCalculatorNet.ReticleEditor.csproj
+++ b/BallisticCalculatorNet.ReticleEditor/BallisticCalculatorNet.ReticleEditor.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BallisticCalculatorNet.MeasurementControl\BallisticCalculatorNet.MeasurementControl.csproj" />
+    <ProjectReference Include="..\BallisticCalculatorNet.ReticleCanvas\BallisticCalculatorNet.ReticleCanvas.csproj" />
   </ItemGroup>
 
   <ItemGroup>
