- start creating main application frame

--- a/BallisticCalculatorNet.UnitTest/BallisticCalculatorNet.UnitTest.csproj
+++ b/BallisticCalculatorNet.UnitTest/BallisticCalculatorNet.UnitTest.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BallisticCalculatorNet.Common\BallisticCalculatorNet.Common.csproj" />
     <ProjectReference Include="..\BallisticCalculatorNet.MeasurementControl\BallisticCalculatorNet.MeasurementControl.csproj" />
     <ProjectReference Include="..\BallisticCalculatorNet.ReticleEditor\BallisticCalculatorNet.ReticleEditor.csproj" />
     <ProjectReference Include="..\BallisticCalculatorNet\BallisticCalculatorNet.csproj" />
