--- a/BallisticCalculatorNet/BallisticCalculatorNet.csproj
+++ b/BallisticCalculatorNet/BallisticCalculatorNet.csproj
@@ -22,7 +22,7 @@
     <ProjectReference Include="..\BallisticCalculatorNet.Common\BallisticCalculatorNet.Common.csproj" />
     <ProjectReference Include="..\BallisticCalculatorNet.MeasurementControl\BallisticCalculatorNet.MeasurementControl.csproj" />
     <ProjectReference Include="..\BallisticCalculatorNet.ReticleCanvas\BallisticCalculatorNet.ReticleCanvas.csproj" />
-    <ProjectReference Include="..\BallisticCalculatorNet.WindControl\BallisticCalculatorNet.WindControl.csproj" />
+    <ProjectReference Include="..\BallisticCalculatorNet.InputPanels\BallisticCalculatorNet.InputPanels.csproj" />
   </ItemGroup>
 
 </Project>
