--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -8,6 +8,10 @@ jobs:
   build:
     name: Build
     runs-on: windows-latest
+    env:
+      config: 'Release'
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
     steps:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
