--- a/BallisticCalculatorNet.Common/BallisticCalculatorNet.Common.csproj
+++ b/BallisticCalculatorNet.Common/BallisticCalculatorNet.Common.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="BallisticCalculator" Version="1.1.0.9" />
     <PackageReference Include="Gehtsoft.Measurements" Version="1.1.12" />
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
