--- a/BallisticCalculatorNet.InputPanels/BallisticCalculatorNet.InputPanels.csproj
+++ b/BallisticCalculatorNet.InputPanels/BallisticCalculatorNet.InputPanels.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="BallisticCalculator" Version="1.1.0.9" />
     <PackageReference Include="Gehtsoft.Measurements" Version="1.1.12" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
   </ItemGroup>
 
