--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@
 
 #github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 patreon: nikolaygekht
-custom: ['http://support.gekht.online/']
+custom: ['https://link.gekht.online/supportProject']
