--- a/BallisticCalculatorNet.InputPanels/BallisticCalculatorNet.InputPanels.csproj
+++ b/BallisticCalculatorNet.InputPanels/BallisticCalculatorNet.InputPanels.csproj
@@ -12,11 +12,13 @@
     <PackageReference Include="Gehtsoft.Measurements" Version="1.1.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="ScottPlot.WinForms" Version="4.1.59" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="System.Text.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BallisticCalculatorNet.MeasurementControl\BallisticCalculatorNet.MeasurementControl.csproj" />
+    <ProjectReference Include="..\BallisticCalculatorNet.ReticleCanvas\BallisticCalculatorNet.ReticleCanvas.csproj" />
   </ItemGroup>
 
 </Project>
