--- a/NuGet.config
+++ b/NuGet.config
@@ -4,7 +4,7 @@
     </config>
 
     <packageSources>
-        <add key="Gehtsoft Repository" value="https://www.myget.org/F/gehtsoft-public/api/v3/index.json" />
+        <!-- <add key="Gehtsoft Repository" value="https://www.myget.org/F/gehtsoft-public/api/v3/index.json" /> -->
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     </packageSources>
 </configuration>
