--- a/BallisticCalculatorNet.Api/BallisticCalculatorNet.Api.csproj
+++ b/BallisticCalculatorNet.Api/BallisticCalculatorNet.Api.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Gehtsoft.Measurements" Version="1.1.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="WatsonTcp" Version="5.0.11" />
   </ItemGroup>
 </Project>
