- add a skeleton of a new option of extensions

--- a/Extensions/BallisticCalculatorExtension.SaveToPdf/BallisticCalculatorExtension.SaveToPdf.csproj
+++ b/Extensions/BallisticCalculatorExtension.SaveToPdf/BallisticCalculatorExtension.SaveToPdf.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net60-windows</TargetFramework>
+    <OutputType>WinExe</OutputType>
     <UseWindowsForms>true</UseWindowsForms>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
@@ -11,10 +12,19 @@
   <ItemGroup>
     <PackageReference Include="BallisticCalculator" Version="1.1.2" />
     <PackageReference Include="Gehtsoft.PDFFlowLib" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\BallisticCalculatorNet.Api\BallisticCalculatorNet.Api.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="extension.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
