--- a/BallisticCalculatorNet.Api/BallisticCalculatorNet.Api.csproj
+++ b/BallisticCalculatorNet.Api/BallisticCalculatorNet.Api.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net80-windows</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BallisticCalculator" Version="1.1.2" />
     <PackageReference Include="Gehtsoft.Measurements" Version="1.1.14" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
-    <PackageReference Include="Serilog" Version="2.12.0" />
-    <PackageReference Include="WatsonTcp" Version="5.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="WatsonTcp" Version="6.0.5" />
   </ItemGroup>
 </Project>
