--- a/BallisticCalculatorNet.UnitTest/BallisticCalculatorNet.UnitTest.csproj
+++ b/BallisticCalculatorNet.UnitTest/BallisticCalculatorNet.UnitTest.csproj
@@ -22,18 +22,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="FluentAssertions.Extension.Json" Version="1.1.2" />
-    <PackageReference Include="Moq" Version="4.20.70" />
-    <PackageReference Include="NReco.Csv" Version="1.0.2" />
-    <PackageReference Include="System.Text.Json" Version="8.0.3" />
-    <PackageReference Include="xunit" Version="2.7.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.8">
+    <PackageReference Include="FluentAssertions" Version="8.7.0" />
+    <PackageReference Include="FluentAssertions.Extension.Json" Version="1.1.3" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="NReco.Csv" Version="1.0.3" />
+    <PackageReference Include="ScottPlot.WinForms" Version="4.1.74" />
+    <PackageReference Include="System.Text.Json" Version="9.0.9" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="6.0.2">
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
