--- a/BallisticCalculatorNet.Api/BallisticCalculatorNet.Api.csproj
+++ b/BallisticCalculatorNet.Api/BallisticCalculatorNet.Api.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="WatsonTcp" Version="6.0.10" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BallisticCalculatorNet.Types\BallisticCalculatorNet.Types.csproj" />
+  </ItemGroup>
 </Project>
