--- a/BallisticCalculatorNet.InputPanels/BallisticCalculatorNet.InputPanels.csproj
+++ b/BallisticCalculatorNet.InputPanels/BallisticCalculatorNet.InputPanels.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\BallisticCalculatorNet.Api\BallisticCalculatorNet.Api.csproj" />
     <ProjectReference Include="..\BallisticCalculatorNet.MeasurementControl\BallisticCalculatorNet.MeasurementControl.csproj" />
     <ProjectReference Include="..\BallisticCalculatorNet.ReticleCanvas\BallisticCalculatorNet.ReticleCanvas.csproj" />
+    <ProjectReference Include="..\BallisticCalculatorNet.Types\BallisticCalculatorNet.Types.csproj" />
   </ItemGroup>
 
 </Project>
