--- a/BallisticCalculatorNet.UnitTest/BallisticCalculatorNet.UnitTest.csproj
+++ b/BallisticCalculatorNet.UnitTest/BallisticCalculatorNet.UnitTest.csproj
@@ -22,11 +22,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="8.7.1" />
-    <PackageReference Include="FluentAssertions.Extension.Json" Version="1.1.3" />
+    <PackageReference Include="FluentAssertions" Version="[7.2.0]" />
+    <PackageReference Include="FluentAssertions.Extension.Json" Version="[1.1.2]" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="NReco.Csv" Version="1.0.3" />
-    <PackageReference Include="ScottPlot.WinForms" Version="4.1.74" />
+    <PackageReference Include="ScottPlot.WinForms" Version="[4.1.74]" />
     <PackageReference Include="System.Text.Json" Version="9.0.9" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
