--- a/BallisticCalculatorNet/BallisticCalculatorNet.csproj
+++ b/BallisticCalculatorNet/BallisticCalculatorNet.csproj
@@ -9,11 +9,11 @@
   <ApplicationIcon>Shooting.ico</ApplicationIcon>
  </PropertyGroup>
  <ItemGroup>
-  <PackageReference Include="BallisticCalculator" Version="1.1.6" />
+  <PackageReference Include="BallisticCalculator" Version="1.1.7.1" />
   <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
   <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.9" />
   <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
-  <PackageReference Include="ScottPlot.WinForms" Version="4.1.74" />
+  <PackageReference Include="ScottPlot.WinForms" Version="[4.1.74]" />
   <PackageReference Include="Serilog" Version="4.3.0" />
   <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
  </ItemGroup>
