--- a/Gehtsoft.Winforms.FluentAssertions/Gehtsoft.Winforms.FluentAssertions.csproj
+++ b/Gehtsoft.Winforms.FluentAssertions/Gehtsoft.Winforms.FluentAssertions.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="8.7.1" />
+    <PackageReference Include="FluentAssertions" Version="[7.2.0]" />
   </ItemGroup>
 </Project>
